--- a/src/main/webapp/iframe_orderCancel.html
+++ b/src/main/webapp/iframe_orderCancel.html
@@ -15,14 +15,17 @@
 </div>
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use(['form', 'table'], function () {
-        var form = layui.form, table = layui.table, $ = layui.$, orderId = 0, ids = [];
+    layui.use(['table'], function () {
+        var table = layui.table, $ = layui.$, orderId = 0, ids = [];
+
+        $('#back').on('click', function () {
+            var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+            parent.layer.close(index); //再执行关闭
+        });
 
         $(function () {
-            orderId = getUrl('orderId');
-        })
-        console.log( api.cancelSubQuery);
-        console.log(orderId);
+            orderId = getUrl('id');
+        });
         var tab = table.render({
             elem: '#orderCancel'
             , url: api.cancelSubQuery
