--- a/src/main/webapp/appoint.html
+++ b/src/main/webapp/appoint.html
@@ -974,10 +974,10 @@
             //会员预约
              var v = '';
              //查询是否是会员
-             $.getJSON(api.queryIdFlag + "&query=" + d.phone + "&random="+Date.now(), function (rs) {
+             $.getJSON(api.queryIdFlag +  "&phone="+d.phone + "&random="+Date.now(), function (rs) {
 
-                 if (rs.success&&rs.data.memberBOS.length==1) {
-                     userInfo = rs.data.memberBOS[0];
+                 if (rs.success&&rs.data!=1) {
+                     userInfo = rs.data;
                      $("#userLevel").text(userInfo.memberLevelName);
                      form.render();
                      state.idFlag = true;
@@ -1263,7 +1263,7 @@
         }else{
             $(".channelSelect").addClass("layui-hide")
             state.hzjg = false;
-            $.getJSON(api.queryIdFlag + "&phoneNumber=" + $("#phoneNumber").val()+"&random="+Date.now(), function (rs) {
+            $.getJSON(api.queryIdFlag + "&phone=" + $("#phoneNumber").val()+"&random="+Date.now(), function (rs) {
                 if (rs.success) {
                     $("#source").val(rs.data.memberRank)
                 }else{
