--- a/src/main/webapp/checkIn.html
+++ b/src/main/webapp/checkIn.html
@@ -784,12 +784,20 @@
         //查询是否是会员
         if ( s == 1 && $("#IDNumber").val().trim().length == '') return;
         if ( s == 2 && $("#phone").val().trim().length == '') return;
-        if(s==1)v = $("#IDNumber").val().trim();
-        if(s==2)v = $("#phone").val().trim();
-        $.getJSON(api.queryIdFlag + "&query=" + v + "&random="+Date.now(), function (rs) {
+        // if(s==1)v = $("#IDNumber").val().trim();
+        // if(s==2)v = $("#phone").val().trim();
+        if(s == 1){
+           v =  "&certificateNumber="+$("#IDNumber").val().trim()
+        }
+        if(s==2){
+            v =  "&phone="+$("#phone").val().trim()
+        }
 
-            if (rs.success&&rs.data.memberBOS.length==1) {
-                renderUserInfo(rs.data.memberBOS[0])
+
+        $.getJSON(api.queryIdFlag + v + "&random="+Date.now(), function (rs) {
+
+            if (rs.success&&rs.data!=null) {
+                renderUserInfo(rs.data)
                 form.render();
                 state.idFlag = true;
                 layer.msg('成功获取会员信息', {icon: 1});
